fix album display on mobile

--- a/frontend/src/app/album-page/album-page.component.css
+++ b/frontend/src/app/album-page/album-page.component.css
@@ -1,48 +1,48 @@
 /* album-page.component.css */
 .login-message {
-    font-size: 20px;
-    font-weight: bold;
-    color: #333;
-    margin-top: 20px;
-    text-align: center;
-  }
-  
-  .sticker-image {
-    width: 100px;
-    height: auto;
-    transition: all 0.3s ease-in-out;
-    margin: 5px;
-    z-index: 1;
-  }
-  
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
-  .sticker-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    overflow-x: auto;
-    margin-bottom: 20px;
-    position: relative;
-  }
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.sticker-image {
+  width: 100px;
+  height: auto;
+  transition: all 0.3s ease-in-out;
+  margin: 5px;
+  margin-right: 10px;
+  z-index: 1;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+  text-align: center;
+}
+
+.sticker-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  margin-bottom: 20px;
+  position: relative;
+}
+
 .full-size-image {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 20px auto;
-  }
-  
-  button {
-    display: block;
-    margin: 20px auto;
-  }
-    
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 20px auto;
+}
+
+button {
+  display: block;
+  margin: 20px auto;
+}
